# linted-python-repo

./: README.md  pyproject.toml
.github/workflows/: lint-markdown.yaml  test-python.yaml
fuu/: __init__.py  core.py
test/: __init__.py  test_basic.py
