[tool.poetry]
name = "foo"
version = "0.1.0"
description = "Boilerplate for a Python repo"
authors = ["JJ Merelo <jjmerelo@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
